added initial table

--- a/index.html
+++ b/index.html
@@ -1,4 +1,30 @@
 <html>
-<head><title>Kolko i Krzyzyk</title></head>
-<body></body>
+<head><title>Kolko i Krzyzyk</title>
+  <script src="jquery-1.11.2.min.js"></script>
+</head>
+<body>
+  <h1>Turbo Gra</h1>
+  <table frame="all">
+            <col width="33%" />
+            <col width="33%" />
+            <col width="33%" />
+            <tbody>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>
+</body>
 </html>
