--- a/index.html
+++ b/index.html
@@ -4,25 +4,26 @@
 </head>
 <body>
   <h1>Turbo Gra</h1>
+  <h2>by Filip and Patrick</h2>
   <table frame="all">
             <col width="33%" />
             <col width="33%" />
             <col width="33%" />
             <tbody>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>x</td>
+                    <td>o</td>
+                    <td>x</td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>o</td>
+                    <td>x</td>
+                    <td>o</td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>o</td>
+                    <td>x</td>
+                    <td>o</td>
                 </tr>
             </tbody>
         </table>
