--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
   <h1>Turbo Gra</h1>
   <h2>by Filip and Patrick</h2>
-  <table border="1">
+  <table border="1" size="16">
             <col width="33%" />
             <col width="33%" />
             <col width="33%" />
