--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head><title>Kolko i Krzyzyk</title>
-  <script src="jquery-1.11.2.min.js"></script>
+  <script src="jquery-1.11.2.min.js"/>
 </head>
 <body>
   <h1>Turbo Gra</h1>
