--- a/index.html
+++ b/index.html
@@ -6,7 +6,23 @@
 
   <script src="//code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 
+<style>
+   td.tap {
 
+
+
+    background-color: #108040;
+
+  }
+
+ td.tap2 {
+
+    background-color: #7ACEF4;
+
+  }
+
+
+</style>
 </head>
 <body>
   <h1>Turbo Gra</h1>
@@ -45,7 +61,7 @@ $(function(){
 
   function tapHandler( event ){
 
-    $( event.target ).addClass( "tap" );
+    $( event.target ).addClass( "tap2" );
 
   }
 
