--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
    td.tap {
 
 
-    size: 400%;
+    size: 100%;
     background-color: #108040;
 
   }
 
  td.tap2 {
 
-    background-color: #7ACEF4;
+    background-color: #0fc6db;
 
   }
 
@@ -27,7 +27,7 @@
 <body>
   <h1>Turbo Gra</h1>
   <h2>by Filip and Patrick</h2>
-  <table border="1" size="400%">
+  <table border="1" size="100%">
             <col width="33%" />
             <col width="33%" />
             <col width="33%" />
